--- a/data/startTemplate.html
+++ b/data/startTemplate.html
@@ -2455,7 +2455,7 @@
                                                   <tbody><tr>
                                                     <td id="imageBlock-14" align="center">
                                                       <a href="https://click.mailerlite.com/link/c/YT0xOTM0MzU4ODYxNzU0NDA1OTgyJmM9bDhuNSZiPTk2MDM1NzI3NyZkPXg4YThzNWw=.5EZ2YvXBDSr5PVkwh4GWCdJID0-pOGdh9L7xp4JMJ08" data-link-id="960357277" target="_self">
-<img src="./Korean Barbecue Beef _ Pork Schnitzel _ Bahn Mi Meatball Skewers_files/91b07269a934703d34403331f04637cd4b0fa9fa.jpeg" border="0" alt="" width="267" style="display: block;">
+<img src="./images/recipe1.jpeg" border="0" alt="" width="267" style="display: block;">
 </a>
                                                     </td>
                                                   </tr>
@@ -2482,7 +2482,7 @@
                                                 <tbody><tr>
                                                   <td id="imageBlock-15" align="center">
                                                     <a href="https://click.mailerlite.com/link/c/YT0xOTM0MzU4ODYxNzU0NDA1OTgyJmM9bDhuNSZiPTk2MDM1NzI3OSZkPWwwcjRnNXE=.mSuqCzlUp90haEWchocSmhjYNDWkS0ekN-j3JX9Q_zQ" data-link-id="960357279" target="_self">
-<img src="./Korean Barbecue Beef _ Pork Schnitzel _ Bahn Mi Meatball Skewers_files/96b4a409255b06c5093e67af874aff6c85e7eb46.jpeg" border="0" alt="" width="267" style="display: block;">
+<img src="./images/recipe2.jpeg" border="0" alt="" width="267" style="display: block;">
 </a>
                                                   </td>
                                                 </tr>
@@ -2551,7 +2551,7 @@
                                                   <tbody><tr>
                                                     <td id="imageBlock-20" align="center">
                                                       <a href="https://click.mailerlite.com/link/c/YT0xOTM0MzU4ODYxNzU0NDA1OTgyJmM9bDhuNSZiPTk2MDM1NzI4MSZkPWEybjZ2NWE=.ZNIgmmi6FTsGd-0jooca-DM-Znm2AhsssGDZsE0cBn0" data-link-id="960357281" target="_self">
-<img src="./Korean Barbecue Beef _ Pork Schnitzel _ Bahn Mi Meatball Skewers_files/9d7d959cd45d40acdff04ec6e489ed50d0d2595e.jpeg" border="0" alt="" width="267" style="display: block;">
+<img src="./images/recipe1.jpeg" border="0" alt="" width="267" style="display: block;">
 </a>
                                                     </td>
                                                   </tr>
@@ -2578,7 +2578,7 @@
                                                 <tbody><tr>
                                                   <td id="imageBlock-21" align="center">
                                                     <a href="https://click.mailerlite.com/link/c/YT0xOTM0MzU4ODYxNzU0NDA1OTgyJmM9bDhuNSZiPTk2MDM1NzI4MiZkPXMwajFkNnk=.8I5D4n7gtfmzuGZiriGRhZHeQLEWahZokr2rEih7l-s" data-link-id="960357282" target="_self">
-<img src="./Korean Barbecue Beef _ Pork Schnitzel _ Bahn Mi Meatball Skewers_files/609ac7bd88abda82a6be719d93a1a6205d40e9b7.jpeg" border="0" alt="" width="267" style="display: block;">
+<img src="./images/recipe1.jpeg" border="0" alt="" width="267" style="display: block;">
 </a>
                                                   </td>
                                                 </tr>
@@ -2647,7 +2647,7 @@
                                                   <tbody><tr>
                                                     <td id="imageBlock-26" align="center">
                                                       <a href="https://click.mailerlite.com/link/c/YT0xOTM0MzU4ODYxNzU0NDA1OTgyJmM9bDhuNSZiPTk2MDM1NzI4MyZkPWoweTNkMnY=.CZMYEt1NLJMvifvHlshzUDUIx2GdM_OI3eoDf4kOCI0" data-link-id="960357283" target="_self">
-<img src="./Korean Barbecue Beef _ Pork Schnitzel _ Bahn Mi Meatball Skewers_files/0fae2f7986ffa2b5d9eec82b0367a79b3342d230.jpeg" border="0" alt="" width="267" style="display: block;">
+<img src="./images/recipe1.jpeg" border="0" alt="" width="267" style="display: block;">
 </a>
                                                     </td>
                                                   </tr>
@@ -2674,7 +2674,7 @@
                                                 <tbody><tr>
                                                   <td id="imageBlock-27" align="center">
                                                     <a href="https://click.mailerlite.com/link/c/YT0xOTM0MzU4ODYxNzU0NDA1OTgyJmM9bDhuNSZiPTk2MDM1NzI4NCZkPWwxazJ5Mmk=.RIl2-ItpqAdqgUI30NcBt0XRKSXfuEqpAnuUlWbDXIo" data-link-id="960357284" target="_self">
-<img src="./Korean Barbecue Beef _ Pork Schnitzel _ Bahn Mi Meatball Skewers_files/623722b288ae7d3a1e1baf5ca488233f457a222c.jpeg" border="0" alt="" width="267" style="display: block;">
+<img src="./images/recipe1.jpeg" border="0" alt="" width="267" style="display: block;">
 </a>
                                                   </td>
                                                 </tr>
