--- a/data/startTemplate.html
+++ b/data/startTemplate.html
@@ -2248,6 +2248,7 @@
                   <!-- Content starts here -->
                   <!-- BORDER RADIUS FOR CARDS LAYOUT -->
                   <!-- BORDER RADIUS FOR DEFAULT LAYOUT -->
+                  
                   <table cellpadding="0" cellspacing="0" border="0" align="center" width="640" style="width: 640px; min-width: 640px;" class="mobileHide">
                     <tbody><tr>
                       <td align="center">
@@ -2268,6 +2269,7 @@
                       </td>
                     </tr>
                   </tbody></table>
+
                   <table align="center" border="0" cellpadding="0" cellspacing="0" class="mlContentTable  mlContentBorderRadius" width="640" style="border-radius: 5px; overflow: hidden;">
                     <tbody><tr>
                       <td>
@@ -3122,4 +3124,8 @@
     </div>
 
 
-<div class="mallbery-caa" style="z-index: 2147483647 !important; text-transform: none !important; position: fixed;"></div></body><loom-container id="lo-engage-ext-container"><loom-shadow classname="resolved"></loom-shadow></loom-container><loom-container id="lo-companion-container"><loom-shadow classname="resolved"></loom-shadow></loom-container><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration><div id="sm-wrapper"></div></html>
+<div class="mallbery-caa" style="z-index: 2147483647 !important; text-transform: none !important; position: fixed;"></div></body>
+<loom-container id="lo-engage-ext-container"><loom-shadow classname="resolved"></loom-shadow></loom-container>
+<loom-container id="lo-companion-container"><loom-shadow classname="resolved"></loom-shadow></loom-container>
+<grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
+</html>
